--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "node": ">=6"
   },
   "scripts": {
+    "build": "babel src --out-dir lib --ignore test.js",
     "coverage": "jest --coverage",
     "lint": "eslint . --fix",
+    "prepublishOnly": "yarn build",
     "test": "jest"
   },
   "files": ["src/", "!src/*.mock.html", "!src/*.test.js"],
-  "main": "src/newsfeed.js",
+  "main": "lib/newsfeed.js",
   "keywords": [],
   "dependencies": {
     "bytes": "^3.0.0",
@@ -29,6 +31,12 @@
     "normalize-space-x": "^3.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^22.0.4",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.5.0",
