--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tneu/news",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "TNEU News Parser",
   "license": "MIT",
   "repository": "tneudevteam/tneu-news",
@@ -55,5 +55,8 @@
   },
   "jest": {
     "testEnvironment": "node"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
