--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,20 @@
 {
   "plugins": [
-    "transform-async-to-generator",
-    "transform-object-rest-spread",
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-proposal-async-generator-functions",
     [
-      "transform-runtime",
+      "@babel/plugin-transform-runtime",
       {
         "helpers": false,
-        "polyfill": false,
+        "polyfill": true,
         "regenerator": true,
-        "moduleName": "babel-runtime"
+        "moduleName": "@babel/runtime"
       }
     ]
   ],
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "node": "6"
