--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "@babel/plugin-transform-async-to-generator",
     "@babel/plugin-proposal-async-generator-functions",
+    "@babel/plugin-proposal-pipeline-operator",
     [
       "@babel/plugin-transform-runtime",
       {
