--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "@babel/plugin-transform-async-to-generator",
     "@babel/plugin-proposal-async-generator-functions",
     "@babel/plugin-proposal-pipeline-operator",
+    "@babel/plugin-proposal-object-rest-spread",
     [
       "@babel/plugin-transform-runtime",
       {
