--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tneu/news",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "TNEU News Parser",
   "license": "MIT",
   "repository": "tneudevteam/tneu-news",
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.40",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.40",
     "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.40",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.40",
