--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coverage": "jest --coverage",
     "lint": "eslint . --fix",
     "prepublishOnly": "yarn build",
-    "test": "jest"
+    "test": "jest src"
   },
   "files": ["src/", "!src/*.mock.html", "!src/*.test.js"],
   "main": "lib/newsfeed.js",
